--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                     <center>
                         <h1>Mon CV</h1>
                     </center>
+                <p>saucisse</p>
             </header>
         </div>
     </body>
