--- a/cv.html
+++ b/cv.html
@@ -16,8 +16,8 @@
                 
                 <nav>
                     <ul>
-                        <li class="actuel"><a>Accueil</a></li>
-                        <li><a href="cv.html">CV</a></li>
+                        <li><a href="index.html">Accueil</a></li>
+                        <li class="actuel"><a>CV</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
