--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
                 <aside>
                     <h1>Quelques Créations :</h1>
                     <p><strong>Voici ici quelques créations que j'ai réalisé.</strong></p>
-                    img src="pop01.png" alt="Pop" class="pop"><p>Ma première création avec Blender, Une version Funko pop de moi.</p>
+                    <img src="pop01.png"><p>Ma première création avec Blender, Une version Funko pop de moi.</p>
+                    <img src="voiture_rouge.png" class="img">
+                    <img src="voiture_rouge_2.png" class="img">
+                    <p>Ici une voiture que j'ai entièrement imaginé puis créé.</p>
                 </aside>
             </section>
         </div>
