--- a/cv.html
+++ b/cv.html
@@ -25,22 +25,25 @@
             
             <section>
                 <article>
-                    <h1>Bienvenue sur mon Site Personnel !</h1>
+                    <h1><a href="Thomas_demeyere.pdf" class="link2">Mon Cv au format .PDF en cliquant ici.</a></h1>
                     <p class="titre">Formations : </p>
                     <p>Actuellement : <strong>BUT Informatique</strong>. IUT de Blagnac (31).</p>
                     <p>2018-2021 : <strong>Bac technologique STI2D</strong> spécialité <strong>Systèmes informatiques et Numérique</strong>. Lycée de la mer Gujan Mestras (33).</p>
                     <p class="titre">Expérience professionnelle</p>
                     <p><strong>2021 : Projet tuteuré au lycée de la mer : Mise en place d'un système de surveillance à distance</strong></p>
-
-                </article>
-                <aside>
-                    <h1>À propos de l'auteur</h1>
-                    <img src="images/bulle.png" alt="" id="fleche_bulle" />
-                    <p id="photo_zozor"><img src="images/zozor_classe.png" alt="Photo de Zozor" /></p>
-                    <p>Laisse-moi le temps de me présenter&nbsp;: je m'appelle Zozor, je suis né un 23 novembre 2005.</p>
-                    <p>Bien maigre, n'est-ce pas ? C'est pourquoi, aujourd'hui, j'ai décidé d'écrire ma biographie afin que vous sachiez qui je suis réellement.</p>
-                    <p><img src="images/facebook.png" alt="Facebook" /><img src="images/twitter.png" alt="Twitter" /><img src="images/vimeo.png" alt="Vimeo" /><img src="images/flickr.png" alt="Flickr" /><img src="images/rss.png" alt="RSS" /></p>
-                </aside>
+                    <p class="titre">Compétences Professionnelles</p>
+                    <p>Informatique :</p>
+                    <p>- Langages : HTML, CSS, Java, Arduino, Python<br/>
+                    - Bureautique : Suite Libre Office, Suite Microsoft<br/>
+                    - Systèmes d'exploitation : Liunx<br/></p>
+                    <p class="titre">Compétences Personnelles</p>
+                    <p>- Assiduité<br/>
+                    - Travail en autonomie<br/>
+                    - Bonne cohésion d'équipe<br/></p>
+                    <p class="titre">Langues</p>
+                    <p>- Anglais : courant<br/>
+                    - Espagnol : intermédiaire<br/></p>
+                 </article>
             </section>
         </div>
     </body>
